--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+    <div id="main">
+        <div id="input">
+            <label for="">Enter your task
+                <input type="text">
+            </label>
+
+        </div>
+        <div id="todos">
+
+        </div>
+
+    </div>
+
 </body>
+
 </html>
