--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 </head>
 
 <body>
+  <div id="container">
+      <h1>Todo-List</h1>
+      <div id="input">
+        <input type="text" placeholder="Add a new Task" id="todo-input">
+        <button id="add">Add Task</button>
+      </div>
 
-    <div id="main">
-        <div id="input">
-            <label for="">Enter your task
-                <input type="text">
-            </label>
+      <ul id="todo-List">
+       <!-- <li><span>Hello</span> <button>Delete</button></li> -->
 
-        </div>
-        <div id="todos">
-
-        </div>
-
+      </ul>
+      
     </div>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
